fix(flow): set default backpressure success